# rag-retrieval-service

./: .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: docker-build.yml  eval.yml  experiment.yml  python-ci.yml  secret-scan.yml  terraform-apply.yml  terraform-plan.yml  terraform-postdeploy.yml
corpus/: README.md  azure-service-bus.md  k8s-configmap.md  k8s-deployments.md  k8s-hpa.md  k8s-namespaces.md  k8s-services.md  keda-overview.md  otel-collector.md  otel-tracing.md  pgvector-overview.md
docs/: API.md  ARCHITECTURE.md  COMPLIANCE.md  DEFERRED_DECISIONS.md  EVAL_FINDINGS.md  EXPERIMENTS.md  HANDOFF.md  HANDOFF_piece1_rag_retrieval_service.md  SCOPING_1_rag_retrieval_service.md  SCORECARD.md  SESSION_NOTES.md  SYSTEM_DESIGN_NOTES.md  architecture.d2  openapi.json  rag-original-review-scorecard.md
evals/: assembly_table.py  criteria.py  layer1.py  rerank_delta.py
evals/fixtures/: queries.jsonl
k8s/: kustomization.yaml
k8s/ingestion/: configmap.yaml  deployment-embedding-worker.yaml  deployment-upload-api.yaml  externalsecret.yaml  httproute.yaml  kustomization.yaml  scaledobject.yaml  service.yaml  serviceaccount.yaml
k8s/platform/: namespaces.yaml
k8s/query/: configmap.yaml  deployment-mcp-server.yaml  deployment-reranker.yaml  deployment-retrieval-api.yaml  hpa.yaml  httproute.yaml  kustomization.yaml  securitypolicy.yaml  service.yaml  serviceaccount.yaml
observability/: README.md  grafana-rag-dashboard.json
observability/artefacts/: README.md  assembly_table.json  assembly_table.md  extraction.md  latency.json  rerank_delta.json  rerank_delta.md
scripts/: export_openapi.py  ingest_corpus.py  loadtest.py  make_test_pdf.py  pg_bootstrap.py  render-k8s.sh  smoke.py
scripts/experiments/: keda_burst.py
src/common/: assembly.py  auth.py  azure_clients.py  chunking.py  config.py  db.py  embeddings.py  http.py  llm.py  models.py  otel.py  rerank.py  retrieval.py  schema.sql
src/embedding_worker/: main.py  tasks.py
src/mcp_server/: auth.py  main.py
src/retrieval_api/: main.py
src/upload_api/: main.py
terraform/: backend.tf  data.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
terraform/auth0/: README.md  auth0.tf  backend.tf  data.tf  providers.tf  terraform.tfvars  variables.tf
tests/unit/: test_api.py  test_assembly.py  test_auth.py  test_chunking.py  (+4 more)
(+7 files in other folders)
