[project]
name = "rag-retrieval-service"
version = "0.1.0"
description = "Production RAG retrieval service on AKS — hybrid (BM25+vector) + rerank + freshness, FastAPI + MCP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10",  # transitive for azure.identity.aio managed identity path
    "anthropic>=0.40",
    "asyncpg>=0.30",
    "azure-ai-documentintelligence>=1.0",
    "azure-identity>=1.25.3",
    "azure-keyvault-secrets>=4.11.0",
    "azure-storage-blob>=12.24",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "llm-provider @ git+https://github.com/claudeaiportfolio/ai-infra-templates.git@llm-provider-v0.1.0#subdirectory=llm-provider",
    "mcp>=1.27.1",
    "openai>=1.110",
    "opentelemetry-exporter-otlp-proto-grpc>=1.41.1",
    "opentelemetry-instrumentation-fastapi>=0.62b1",
    "opentelemetry-instrumentation-httpx>=0.62b1",
    "opentelemetry-instrumentation-logging>=0.62b1",
    "opentelemetry-sdk>=1.41.1",
    "pgvector>=0.3.6",
    "platform-core[queue] @ git+https://github.com/claudeaiportfolio/ai-infra-templates.git@platform-core-v0.1.0#subdirectory=platform-core",
    "pydantic-settings>=2.14.1",
    "pyjwt[crypto]>=2.9",
    "tenacity>=9.0",
    "tiktoken>=0.8",
    "uvicorn>=0.47.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# platform-core is consumed as a git-subdirectory (direct) reference.
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
    "src/common",
    "src/upload_api",
    "src/embedding_worker",
    "src/retrieval_api",
    "src/mcp_server",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.13",
    "mypy>=1.11",
    "matplotlib>=3.9",  # load-test + autoscale artefact plots
    # Eval harness (evals/ only — not shipped in the app images).
    "agent-evals[judge] @ git+https://github.com/claudeaiportfolio/ai-infra-templates.git@agent-evals-v0.2.0#subdirectory=agent-evals",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
files = ["src"]
# Most Azure/OpenAI/MCP SDKs ship without type stubs; don't fail on their
# missing imports. We still type-check our own code (no_implicit_optional, etc.).
ignore_missing_imports = true
